# collaborator

./: CMakeLists.txt  collaborator.thrift
chat2/: Makefile  Unit.cc  Unit.h  chat.cpp  chat.h  chat.pro  chat.vcxproj  console.cc  login.cpp  login.h  login.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  talkmm.cc  widget.cpp  widget.h
chat2/GeneratedFiles/: qrc_resource.cpp  ui_chat.h  ui_tcpclient.h  ui_tcpserver.h  ui_widget.h
client/: CMakeLists.txt  CollaborateClient.cpp  CollaborateClient.h  main.cpp
common/: CMakeLists.txt  Comm.cpp  Comm.h  Debug.h  ServerEventHandler.cpp  ServerEventHandler.h
diff_match_patch_20121119/cpp/: CMakeLists.txt  Makefile  diff_match_patch.pro
gen-cpp/: CMakeLists.txt  collaborate.cpp  collaborate.h  collaborate_server.skeleton.cpp  collaborator_constants.cpp  collaborator_constants.h  collaborator_types.cpp  collaborator_types.h
server/: CMakeLists.txt  CollaborateHandler.cpp  CollaborateHandler.h  main.cpp
